src/pages/GitHubIssues/components/Repos/Repos.module.css
.root {
	position: fixed;
	overflow: hidden;
	display: grid;
	place-items: center;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: var(--modal-content-index);
	pointer-events: none;
}

.backdrop {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.604);
	z-index: var(--modal-bg-index);
}

.container {
	pointer-events: all;
	background-color: white;
	z-index: var(--modal-content-index);
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 90%;
	max-width: 800px;
	height: 90%;
	display: flex;
	flex-direction: column;
	border-radius: 1rem;
	overflow: hidden;
	box-shadow: var(--base-shadow);
}

@keyframes fadeIn {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

.backdropEnter {
	animation: fadeIn 150ms ease-in-out forwards;
}

.backdropExit {
	animation: reverse fadeIn 150ms ease-in-out forwards;
}

.contentEnter {
	animation: contentAnimation 150ms ease-in-out forwards;
}

.contentExit {
	animation: reverse contentAnimation 150ms ease-in-out forwards;
}

@keyframes contentAnimation {
	from {
		opacity: 0;
		transform: scale(0.9);
	}
	to {
		opacity: 1;
		transform: scale(1);
	}
}

